<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.krishna.mydemoapp.example.espresso.EspressoExample">
<Button
    android:layout_alignParentTop="true"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:text="Add New"
    android:id="@+id/new_add"/>

 <android.support.v7.widget.RecyclerView
     android:layout_below="@+id/new_add"
     android:id="@+id/recycler_view"
     android:scrollbars="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
</RelativeLayout>
