...
    </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:id="@+id/espresso_example"
                android:gravity="center"
                android:background="@drawable/textview_background"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="Espresso example"
                android:layout_width="match_parent"
...
